fix header positioning on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@ html, body, #root {
 }
 
 body {
-  overflow: hidden;
   overscroll-behavior-y: contain;
 }
 
